fixes chat centering issue on mobile

--- a/client/css/styles.css
+++ b/client/css/styles.css
@@ -698,6 +698,12 @@ textarea{
   margin: 20px;
 }
 
+@media(max-width: 700px){
+  #chat-content{
+    flex-grow: 0;
+  }
+}
+
 #chatToggle{
   padding-top: 25px;
   display: inline-flex;
